[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watch4ping"
version = "0.1.0"
description = "Monitor an internet connection with ping and generate session reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "dornelas" }
]
keywords = ["internet", "monitoring", "ping", "network", "cli"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: System :: Monitoring",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
watch4ping = "watch4ping.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/watch4ping"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
